ecmascript/parser/tests/test262-error-references/fail/6e792760337980f7.js.stderr
error: Expected unicode escape
 --> $DIR/tests/test262-parser/fail/6e792760337980f7.js:1:7
  |
1 | \uD800\
  |       ^

error: Invalid character in identifier
 --> $DIR/tests/test262-parser/fail/6e792760337980f7.js:1:1
  |
1 | \uD800\
  | ^^^^^^

